--- a/Clase/style.css
+++ b/Clase/style.css
@@ -3,3 +3,32 @@ header{
 	position: relative;
 	text-align: center;
 }
+
+nav{
+
+	position: relative;
+	margin: auto;
+	width: 100%;
+	height: auto;
+	background-color: black;
+}
+
+nav ul {
+	position: relative;
+	margin: auto;
+	width: 50%;
+	text-align: center;
+
+}
+
+nav ul li{
+display: inline-block;
+width: 24%;
+line-height: 50px;
+
+}
+
+nav ul li a {
+	color: white;
+	
+}
